--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0",
+    "express-rate-limit": "^7.5.0",
+    "node-cache": "^5.1.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
