--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "test": "npm run test:unit",
+    "test:performance": "artillery run test/performance-test.yml"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +16,9 @@
     "node-cache": "^5.1.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "artillery": "^2.0.22",
+    "nodemon": "^3.1.9"
   }
 }
