--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "yaml.schemas": {
         "https://www.artillery.io/schema.json": [
-            "file:///home/bob-in-linux/Workspace/web/CS1/CS1/test/performance-test.yml"
+            "file:///home/bob-in-linux/Workspace/web/CS1/CS1/test/performance-test.yml",
+            "git:/home/bob-in-linux/Workspace/web/CS1/CS1/test/performance-test.yml?%7B%22path%22%3A%22%2Fhome%2Fbob-in-linux%2FWorkspace%2Fweb%2FCS1%2FCS1%2Ftest%2Fperformance-test.yml%22%2C%22ref%22%3A%22ed19a6502540e51fb54220ec3cc74b143304efe1%22%7D"
         ]
     }
 }
