--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon server.js",
     "test": "npm run test:unit",
-    "test:performance": "artillery run test/performance-test.yml"
+    "test:begin": "artillery run test/performance-test.yml",
+    "test:soak": "artillery run test/performance-test2.yml",
+    "test:spike": "artillery run test/performance-test3.yml"
   },
   "author": "",
   "license": "ISC",
