--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bull": "^4.16.5",
     "express": "^4.21.0",
     "express-rate-limit": "^7.5.0",
-    "node-cache": "^5.1.2",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
